--- a/hyprland.conf
+++ b/hyprland.conf
@@ -46,6 +46,7 @@ $menu = rofi -show drun -show-icons
 # exec-once = $terminal
  exec-once = nm-applet --indicator
  exec-once = waybar & hyprpaper & firefox
+ exec-once = systemctl --user start hyperpolkitagent
 
 
 #############################
