add hyprlock, fix wallpaper

--- a/hyprland.conf
+++ b/hyprland.conf
@@ -47,7 +47,7 @@ $menu = rofi -show drun -show-icons
  exec-once = nm-applet --indicator
  exec-once = waybar & hyprpaper & firefox
  exec-once = systemctl --user start hyperpolkitagent
-
+ exec-once = hyprpaper
 
 #############################
 ### ENVIRONMENT VARIABLES ###
