--- a/hyprland.conf
+++ b/hyprland.conf
@@ -241,6 +241,8 @@ bind = $mainMod, F, exec, firefox
 bind = $mainMod SHIFT, S, exec, grimblast copy area
 bind = $mainMod SHIFT CONTROL, S, exec, grimblast save area
 
+bind = $mainMod SHIFT, L, exec, hyprlock
+
 # Move focus with mainMod + arrow keys
 bind = $mainMod, h, movefocus, l
 bind = $mainMod, l, movefocus, r
