--- a/hyprpaper.conf
+++ b/hyprpaper.conf
@@ -1,2 +1,2 @@
-preload = ./nixWallpaper.png
-wallpaper = eDP-1, ./nixWallpaper.png
+preload = /home/kangn8r/.config/hypr/nixWallpaper.png 
+wallpaper = eDP-1, /home/kangn8r/.config/hypr/nixWallpaper.png
