--- a/hyprland.conf
+++ b/hyprland.conf
@@ -45,9 +45,21 @@ $menu = rofi -show drun -show-icons
 
 # exec-once = $terminal
  exec-once = nm-applet --indicator
- exec-once = waybar & hyprpaper & firefox
+ exec-once = waybar & hyprpaper
  exec-once = systemctl --user start hyperpolkitagent
- exec-once = hyprpaper
+
+
+
+
+#############################
+#### COOL WINDOW RULES ######
+#############################
+windowrulev2 = workspace 1, monitor 1, class:^(firefox)$
+exec-once = firefox
+
+windowrulev2 = workspace 2, monitor 1, class:^(vesktop)$
+exec-once = vesktop
+
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -84,8 +96,8 @@ env = HYPRCURSOR_SIZE,24
 
 # https://wiki.hypr.land/Configuring/Variables/#general
 general {
-    gaps_in = 5
-    gaps_out = 20
+    gaps_in = 2
+    gaps_out = 10
 
     border_size = 2
 
@@ -99,7 +111,7 @@ general {
     # Please see https://wiki.hypr.land/Configuring/Tearing/ before you turn this on
     allow_tearing = false
 
-    layout = dwindle
+    layout = master
 }
 
 # https://wiki.hypr.land/Configuring/Variables/#decoration
@@ -176,7 +188,8 @@ dwindle {
 
 # See https://wiki.hypr.land/Configuring/Master-Layout/ for more
 master {
-    new_status = master
+    new_status = slave
+    mfact = .60
 }
 
 # https://wiki.hypr.land/Configuring/Variables/#misc
@@ -234,9 +247,7 @@ bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, R, exec, $menu
-bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, F, exec, firefox
-# bind = $mainMod, J, togglesplit, # dwindle
 
 bind = $mainMod SHIFT, S, exec, grimblast copy area
 bind = $mainMod SHIFT CONTROL, S, exec, grimblast save area
