add dunst, upate keybinds

--- a/hyprland.conf
+++ b/hyprland.conf
@@ -45,7 +45,7 @@ $menu = rofi -show drun -show-icons
 
 # exec-once = $terminal
  exec-once = nm-applet --indicator
- exec-once = waybar & hyprpaper
+ exec-once = waybar & hyprpaper & dunst
  exec-once = systemctl --user start hyperpolkitagent
 
 
@@ -243,10 +243,12 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 # Example binds, see https://wiki.hypr.land/Configuring/Binds/ for more
 bind = $mainMod, Q, exec, $terminal
 bind = $mainMod, C, killactive,
-bind = $mainMod, M, exit,
+# bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, R, exec, $menu
+bind = $mainMod, M, exec, rofi -show power-menu -modi power-menu:rofi-power-menu
+bind = $mainMod SHIFT, M, exit
 bind = $mainMod, F, exec, firefox
 
 bind = $mainMod SHIFT, S, exec, grimblast copy area
