--- a/hyprland.conf
+++ b/hyprland.conf
@@ -251,6 +251,8 @@ bind = $mainMod, M, exec, rofi -show power-menu -modi power-menu:rofi-power-menu
 bind = $mainMod SHIFT, M, exit
 bind = $mainMod, F, exec, firefox
 
+bind = $mainMod, RETURN, fullscreen
+
 bind = $mainMod SHIFT, S, exec, grimblast copy area
 bind = $mainMod SHIFT CONTROL, S, exec, grimblast save area
 
