--- a/hyprland.conf
+++ b/hyprland.conf
@@ -48,7 +48,14 @@ $menu = rofi -show drun -show-icons
  exec-once = waybar & hyprpaper & dunst
  exec-once = systemctl --user start hyperpolkitagent
 
+#############################
+###### HYPRIDLE + LOCK ######
+#############################
 
+# Lock on lid open
+bindl=,switch:on:Lid Switch, exec, hyprlock --immediate
+# Lock lid on close
+bindl=,switch:off:Lid Switch, exec, hyprlock --immediate
 
 
 #############################
@@ -301,7 +308,7 @@ bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
 # Laptop multimedia keys for volume and LCD brightness
-bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
+bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 2 @DEFAULT_AUDIO_SINK@ 5%+
 bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
 bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
