--- a/hyprland.conf
+++ b/hyprland.conf
@@ -52,10 +52,13 @@ $menu = rofi -show drun -show-icons
 ###### HYPRIDLE + LOCK ######
 #############################
 
+# Hypridle setup
+exec-once = hypridle
+
 # Lock on lid open
 bindl=,switch:on:Lid Switch, exec, hyprlock --immediate
 # Lock lid on close
-bindl=,switch:off:Lid Switch, exec, hyprlock --immediate
+bindl=,switch:off:Lid Switch, exec, hyprlock --immediate & systemctl suspend
 
 
 #############################
