--- a/hyprland.conf
+++ b/hyprland.conf
@@ -231,9 +231,8 @@ input {
 }
 
 # https://wiki.hypr.land/Configuring/Variables/#gestures
-gestures {
-    workspace_swipe = false
-}
+# gestures {
+# }
 
 # Example per-device config
 # See https://wiki.hypr.land/Configuring/Keywords/#per-device-input-configs for more
@@ -258,6 +257,7 @@ bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, M, exec, rofi -show power-menu -modi power-menu:rofi-power-menu
+bind = $mainMod CONTROL, E, exec, rofimoji
 bind = $mainMod SHIFT, M, exit
 bind = $mainMod, F, exec, firefox
 
