--- a/hyprland.conf
+++ b/hyprland.conf
@@ -44,9 +44,10 @@ $menu = rofi -show drun -show-icons
 # Or execute your favorite apps at launch like this:
 
 # exec-once = $terminal
- exec-once = nm-applet --indicator
- exec-once = waybar & hyprpaper & dunst
- exec-once = systemctl --user start hyperpolkitagent
+ # exec-once = nm-applet --indicator
+ # exec-once = waybar & hyprpaper & dunst
+ # exec-once = systemctl --user start hyperpolkitagent
+ exec-once = dms run
 
 #############################
 ###### HYPRIDLE + LOCK ######
@@ -260,13 +261,12 @@ bind = $mainMod, M, exec, rofi -show power-menu -modi power-menu:rofi-power-menu
 bind = $mainMod CONTROL, E, exec, rofimoji
 bind = $mainMod SHIFT, M, exit
 bind = $mainMod, F, exec, firefox
+bind = $mainMod, O, exec, emacs
 
 bind = $mainMod, RETURN, fullscreen
 
 bind = $mainMod SHIFT, S, exec, grimblast copy area
 bind = $mainMod SHIFT CONTROL, S, exec, grimblast save area
-
-bind = $mainMod SHIFT, L, exec, hyprlock
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, h, movefocus, l
