no gradiant borders

--- a/hyprland.conf
+++ b/hyprland.conf
@@ -113,7 +113,7 @@ general {
     border_size = 2
 
     # https://wiki.hypr.land/Configuring/Variables/#variable-types for info about colors
-    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
+    col.active_border = rgba(33ccffee)
     col.inactive_border = rgba(595959aa)
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
@@ -153,7 +153,7 @@ decoration {
 
 # https://wiki.hypr.land/Configuring/Variables/#animations
 animations {
-    enabled = yes, please :)
+    enabled = yes, please :
 
     # Default animations, see https://wiki.hypr.land/Configuring/Animations/ for more
 
