turn off dms run from hyprland config

--- a/hyprland.conf
+++ b/hyprland.conf
@@ -47,7 +47,7 @@ $menu = rofi -show drun -show-icons
  # exec-once = nm-applet --indicator
  # exec-once = waybar & hyprpaper & dunst
  # exec-once = systemctl --user start hyperpolkitagent
- exec-once = dms run
+  # exec-once = dms run
 
 #############################
 ###### HYPRIDLE + LOCK ######
