--- a/hyprland.conf
+++ b/hyprland.conf
@@ -65,10 +65,24 @@ bindl=,switch:off:Lid Switch, exec, hyprlock --immediate & systemctl suspend
 #############################
 #### COOL WINDOW RULES ######
 #############################
-windowrulev2 = workspace 1, monitor 1, class:^(firefox)$
+windowrule {
+	name = firefoxOnWS1
+	match:class = ^(firefox)$
+
+	monitor = 1
+	workspace = 1
+}
+
 exec-once = firefox
 
-windowrulev2 = workspace 2, monitor 1, class:^(vesktop)$
+windowrule {
+	name = vesktopOnWS2
+	match:class = ^(vesktop)$
+
+	monitor = 1
+	workspace = 2
+}
+
 exec-once = vesktop
 
 
@@ -336,7 +350,7 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 
 # Ignore maximize requests from apps. You'll probably like this.
 windowrule {
-  name = windowrule-3
+  name = ignoreMaximize
   suppress_event = maximize
   match:class = .*
 }
@@ -344,7 +358,7 @@ windowrule {
 
 # Fix some dragging issues with XWayland
 windowrule {
-  name = windowrule-4
+  name = xwaylandDraggingIssues
   no_focus = on
   match:class = ^$
   match:title = ^$
